--- a/app/src/main/res/layout/contact_card.xml
+++ b/app/src/main/res/layout/contact_card.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/eachCard"
-    android:outlineSpotShadowColor="@color/black"
+    app:cardElevation="5dp"
     app:cardCornerRadius="10dp"
     android:layout_marginStart="7dp"
     android:layout_marginTop="7dp"
